--- a/style.css
+++ b/style.css
@@ -10,27 +10,34 @@ img{
   width: 100%;
   height: auto;
   z-index: 2;
-
 }
 
+
+.imgCity
+{
+	position: absolute;
+	width: 100px; 
+	height: 100px;
+	display: none;
+	border: 5px solid white;
+	cursor: pointer;
+	z-index: 4;
+}
+
+
 .PointCity{
-width: 7px; 
-height: 7px;
-background: #FFD700;
+width: 9px; 
+height: 9px;
+background: #FFFF00;
 border-radius: 50%;
+border: 2px;
+border-color: #FFD700; 
 position: absolute;
 z-index: 3;
 cursor: pointer;
-
+display: none;
 
 }
-
-
-
-.PointCity:last-child{
-  margin-right: 0;
-}
-
 
 .tooltip{
   position: absolute;
@@ -65,6 +72,8 @@ cursor: pointer;
 .PointCity:hover .tooltip{
   opacity: 1;
 }
+
+
 
 
 
